crucible-syntax/test-data/simulator-tests/double-branch.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* The branch in main from test-data/simulator-tests/double-branch.cbl:5:5 to test-data/simulator-tests/double-branch.cbl:7:13
    eq 5 ca@0:i
* The branch in main from test-data/simulator-tests/double-branch.cbl:7:5 to test-data/simulator-tests/double-branch.cbl:9:14
    intLe 0 cb@1:i
Prove:
  test-data/simulator-tests/double-branch.cbl:9:5: error: in main
  assert
  eq 5 ca@0:i
PROVED
